# ghost

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
docs/superpowers/specs/: 2026-06-14-ghost-design.md  2026-06-14-ghost-sentinel-bridge-design.md
src/: bridge.rs  cli.rs  config.rs  event.rs  interceptor.rs  lib.rs  main.rs  personality.rs  session.rs  shadow.rs  tui.rs  watchlog.rs
src/gadgets/: mod.rs
tests/: skeleton.rs
